--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "worker-r2-cdn",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
@@ -11,5 +11,6 @@
 	"devDependencies": {
 		"typescript": "^5.5.2",
 		"wrangler": "^4.28.0"
-	}
+	},
+	"packageManager": "pnpm@10.13.1"
 }
