chore: add husky and lint-staged for pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky"
 	},
 	"devDependencies": {
+		"husky": "^9.1.7",
 		"prettier": "^3.6.2",
 		"typescript": "^5.5.2",
 		"wrangler": "^4.28.0"
 	},
-	"packageManager": "pnpm@10.13.1"
+	"packageManager": "pnpm@10.13.1",
+	"lint-staged": {
+		"*.{js,css,md}": "prettier --write"
+	}
 }
