--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -44,5 +44,10 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }],
-	"kv_namespaces": [{ "binding": "IMAGE_CACHE", "id": "671f7f35b0ca475aa1924e8ff7506f75" }],
+	"r2_buckets": [
+    {
+      "bucket_name": "wolfstar-cdn",
+      "binding": "wolfstar_cdn"
+    }
+  ]
 }
