--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -25,7 +25,7 @@
 		"bindings": [
 			{
 				"name": "RATE_LIMITER",
-				"type": "rate_limit",
+				"type": "ratelimit",
 				"namespace_id": "1", // Replace with your Production Rate Limiting Namespace ID
 				"simple": {
 					"limit": 20,
