--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
+		"@cloudflare/workers-types": "^4.20250913.0",
 		"husky": "^9.1.7",
 		"typescript": "^5.9.2",
 		"wrangler": "^4.36.0"
