--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
 
 		/* Skip type checking all .d.ts files. */
 		"skipLibCheck": true,
-		"types": ["@cloudflare/workers-types"]
+		"types": ["./worker-configuration.d.ts"]
 	}
 }
