feat(rate-limiting): replace custom rate limiter with @hono-rate-limiter/cloudflare
- Add @hono-rate-limiter/cloudflare dependency
- Remove custom rate limiting implementation in favor of the library
- Simplify error response handling by using hono's context.json()
- Clean up unused imports and middleware

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"*": ["biome format --no-errors-on-unmatched --files-ignore-unknown=true"]
 	},
 	"dependencies": {
+		"@hono-rate-limiter/cloudflare": "^0.2.2",
 		"hono": "^4.9.7"
 	}
 }
