--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -26,7 +26,7 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
 	"vars": {
-		"ALLOWED_ORIGINS": "https://wolfstar.rocks",
+		"ALLOWED_ORIGINS": "https://wolfstar.rocks,https://beta.wolfstar.rocks",
 		"R2_WORKER_URL": "worker-r2-cdn.redstar071.workers.dev"
 	},
 	/**
